--- a/.project
+++ b/.project
@@ -53,6 +53,15 @@
 			</matcher>
 		</filter>
 		<filter>
+			<id>1493660654417</id>
+			<name>res</name>
+			<type>29</type>
+			<matcher>
+				<id>org.eclipse.ui.ide.multiFilter</id>
+				<arguments>1.0-name-matches-true-false-*</arguments>
+			</matcher>
+		</filter>
+		<filter>
 			<id>1489692029191</id>
 			<name>src</name>
 			<type>22</type>
