--- a/.project
+++ b/.project
@@ -26,7 +26,7 @@
 	</natures>
 	<filteredResources>
 		<filter>
-			<id>1493478184465</id>
+			<id>1493731871261</id>
 			<name></name>
 			<type>22</type>
 			<matcher>
@@ -35,7 +35,7 @@
 			</matcher>
 		</filter>
 		<filter>
-			<id>1493478184467</id>
+			<id>1493731871262</id>
 			<name></name>
 			<type>22</type>
 			<matcher>
@@ -44,12 +44,21 @@
 			</matcher>
 		</filter>
 		<filter>
-			<id>1493478184469</id>
+			<id>1493731871303</id>
 			<name></name>
 			<type>5</type>
 			<matcher>
 				<id>org.eclipse.ui.ide.multiFilter</id>
 				<arguments>1.0-location-matches-false-false-res/bin</arguments>
+			</matcher>
+		</filter>
+		<filter>
+			<id>1493731871305</id>
+			<name></name>
+			<type>5</type>
+			<matcher>
+				<id>org.eclipse.ui.ide.multiFilter</id>
+				<arguments>1.0-location-matches-false-false-*</arguments>
 			</matcher>
 		</filter>
 		<filter>
