replace source-sdk-2013 with source-sdk-2013-headers

--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "libglez"]
 	path = libglez
 	url = https://github.com/nullifiedcat/libglez
+[submodule "source-sdk-2013-headers"]
+	path = source-sdk-2013-headers
+	url = https://github.com/nullifiedcat/source-sdk-2013-headers
