please do the cmakelists for me

--- a/.gitignore
+++ b/.gitignore
@@ -248,6 +248,16 @@ ModelManifest.xml
 
 .settings/*
 
+CMakeCache.txt
+CMakeFiles
+CMakeScripts
+Testing
+Makefile
+cmake_install.cmake
+install_manifest.txt
+compile_commands.json
+CTestTestfile.cmake
+
 # Don't ignore binary resource files
 !res/bin/*
 
