--- a/.gitmodules
+++ b/.gitmodules
@@ -12,7 +12,7 @@
 	url = https://github.com/nullifiedcat/libxoverlay
 [submodule "libglez"]
 	path = libglez
-	url = https://github.com/nullifiedcat/libglez
+	url = https://github.com/BenCat07/libglez
 [submodule "source-sdk-2013-headers"]
 	path = source-sdk-2013-headers
 	url = https://github.com/nullifiedcat/source-sdk-2013-headers
