--- a/include/config.h.in
+++ b/include/config.h.in
@@ -11,3 +11,6 @@
 #define ENABLE_IPC @EnableIPC@
 #define DATA_PATH "@DataPath@"
 #define ENABLE_VAC_BYPASS @VACBypass@
+#define ENABLE_TEXTMODE_STDIN @EnableTextmodeStdin@
+#define ENABLE_NULL_GRAPHICS @EnableNullGraphics@
+#define TEXTMODE @Textmode@
