--- a/include/version.h.in
+++ b/include/version.h.in
@@ -1,4 +1,4 @@
 #pragma once
 
-#define GIT_COMMIT_HASH "@GIT_COMMIT_HASH@"
-#define GIT_COMMIT_DATE "@GIT_COMMIT_DATE@"
+#define GIT_COMMIT_HASH @GIT_COMMIT_HASH@
+#define GIT_COMMIT_DATE @GIT_COMMIT_DATE@
