menu -> visual/menu, conditional compilation

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -46,7 +46,9 @@ add_subdirectory(classinfo)
 add_subdirectory(copypasted)
 add_subdirectory(hacks)
 add_subdirectory(hooks)
-add_subdirectory(menu)
 add_subdirectory(reclasses)
 add_subdirectory(sdk)
-add_subdirectory(visual)
+
+if(EnableVisuals)
+    add_subdirectory(visual)
+endif()
