--- a/include/CMakeLists.txt
+++ b/include/CMakeLists.txt
@@ -62,7 +62,9 @@ add_subdirectory(classinfo)
 add_subdirectory(copypasted)
 add_subdirectory(hacks)
 add_subdirectory(hooks)
-add_subdirectory(menu)
 add_subdirectory(reclasses)
 add_subdirectory(sdk)
-add_subdirectory(visual)
+
+if(EnableVisuals)
+    add_subdirectory(visual)
+endif()
