--- a/src/visual/CMakeLists.txt
+++ b/src/visual/CMakeLists.txt
@@ -7,4 +7,6 @@ target_sources(cathook PRIVATE
         "${CMAKE_CURRENT_LIST_DIR}/EffectChams.cpp"
         "${CMAKE_CURRENT_LIST_DIR}/EffectGlow.cpp")
 
-add_subdirectory(menu)
+if(EnableGUI)
+    add_subdirectory(menu)
+endif()
