--- a/src/visual/CMakeLists.txt
+++ b/src/visual/CMakeLists.txt
@@ -5,7 +5,8 @@ target_sources(cathook PRIVATE
         "${CMAKE_CURRENT_LIST_DIR}/drawing.cpp"
         "${CMAKE_CURRENT_LIST_DIR}/drawmgr.cpp"
         "${CMAKE_CURRENT_LIST_DIR}/EffectChams.cpp"
-        "${CMAKE_CURRENT_LIST_DIR}/EffectGlow.cpp")
+        "${CMAKE_CURRENT_LIST_DIR}/EffectGlow.cpp"
+        "${CMAKE_CURRENT_LIST_DIR}/fidgetspinner.cpp")
 
 if(EnableGUI)
     add_subdirectory(menu)
